# multiversX-escrow

./: README.md
empty/: Cargo.toml
empty/meta/: Cargo.toml
empty/output/: empty.abi.json  empty.mxsc.json
empty/tests/: empty_scenario_rs_test.rs
empty/wasm/: Cargo.toml
empty/wasm/src/: lib.rs
escrow-sc/: Cargo.toml
escrow-sc/meta/: Cargo.toml
escrow-sc/meta/src/: main.rs
escrow-sc/output/: escrow-sc.abi.json  escrow-sc.imports.json  escrow-sc.mxsc.json  escrow-sc.wasm
escrow-sc/scenarios/: escrow_sc.scen.json
escrow-sc/src/: escrow_sc.rs
escrow-sc/tests/: escrow_sc_scenario_go_test.rs  escrow_sc_scenario_rs_test.rs
escrow-sc/wallet/: wallet-owner.pem
escrow-sc/wasm/: Cargo.toml
escrow-sc/wasm/src/: lib.rs
mx-escrow-front/: README.md  next.config.mjs  package-lock.json  package.json
mx-escrow-front/app/: app.tsx  layout.tsx  page.tsx  providers.tsx
mx-escrow-front/hooks/: useProvider.ts
