[package]
name = "escrow-sc"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/escrow_sc.rs"

[dependencies.multiversx-sc]
version = "0.56.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.1"

[workspace]
members = [
    ".",
    "meta",
]
